<resources>
    <string name="app_name">ABAC</string>
    <string name="policy">Policy:</string>
    <string name="deploy_policy">Deploy Policy</string>
    <string name="add_policy">Add Policy</string>
    <string name="title_activity_add_policy">AddPolicyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_policy_field">Add Policy</string>
    <string name="policy_name_field">Policy Name</string>
    <string name="back">Back</string>
    <string name="size">Size</string>
    <string name="delete_policy">Delete Policy</string>
</resources>